[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/CollectionToolbar.gd" type="Script" id=1]
[ext_resource path="res://thridparty/default.theme" type="Theme" id=2]
[ext_resource path="res://thridparty/medium_front.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/side_deck.svg" type="Texture" id=7]
[ext_resource path="res://images/middle_deck.svg" type="Texture" id=8]
[ext_resource path="res://images/full_deck.svg" type="Texture" id=9]
[ext_resource path="res://images/Save.svg" type="Texture" id=10]
[ext_resource path="res://images/Remove.svg" type="Texture" id=11]
[ext_resource path="res://images/rand.svg" type="Texture" id=12]
[ext_resource path="res://images/stats.svg" type="Texture" id=14]

[node name="CollectionToolbar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -580.0
margin_bottom = -530.0
rect_min_size = Vector2( 444, 70 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 372.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 372.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeckName" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 338.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
placeholder_text = "Name"

[node name="SaveButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 342.0
margin_right = 372.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 372.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 154.0
margin_bottom = 33.0
size_flags_horizontal = 3
toggle_mode = true
text = "BIG CARDS"

[node name="StatsButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 188.0
margin_bottom = 33.0
toggle_mode = true
icon = ExtResource( 14 )

[node name="PlusOneButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 120.0
margin_right = 234.0
margin_bottom = 33.0
size_flags_horizontal = 3
toggle_mode = true
text = "SHOW OWNED"

[node name="TestButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 228.0
margin_bottom = 33.0
icon = ExtResource( 12 )

[node name="DelButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 262.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 11 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 266.0
margin_right = 270.0
margin_bottom = 33.0

[node name="FullButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 274.0
margin_right = 304.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 9 )

[node name="MidButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 338.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 8 )

[node name="SideButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 372.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 7 )

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 376.0
margin_right = 380.0
margin_bottom = 70.0

[node name="ExitButton" type="Button" parent="HBoxContainer"]
margin_left = 384.0
margin_right = 444.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 0 )
text = " DONE"
align = 0
